# console-mode

./: .gitignore  CONFIGURATION.md  Cargo.toml  INTEGRATION_EXAMPLE.md  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
nix/: home-manager-module.nix  nixos-module.nix  package.nix
src/: main.rs
