[package]
name = "console-mode"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust-based gamescope session launcher with automatic display detection and capability detection"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
libc = "0.2"

# TUI launcher dependencies
ratatui = "0.29"
crossterm = "0.28"
evdev = "0.12"
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
